fix: overlapping cards

--- a/scss/_patterns_content-card.scss
+++ b/scss/_patterns_content-card.scss
@@ -60,8 +60,10 @@
     border: 1px solid var(--color-border-low-contrast, rgba(0, 0, 0, 0.1));
     display: flex;
     flex-direction: column;
-    height: 23.75rem; /* 380px */
+    height: 23.75rem;
     justify-content: space-between;
+    margin-bottom: $sp-large;
+    max-width: 100%;
     overflow: hidden;
     padding-top: var(--spacing-vertical-large, $sp-medium);
     position: relative;
@@ -75,50 +77,30 @@
         align-items: flex-start;
         align-self: stretch;
         flex-direction: row;
-        gap: $sp-medium; /* 16px */
-        height: 11.703125rem; /* 187.25px */
+        gap: $sp-medium;
+        height: 11.703125rem;
+        max-width: 100%;
         padding: $sp-medium $sp-medium 0;
-        width: var(--size-width-grid-col-4, 37.5rem); /* 600px */
+        width: var(--size-width-grid-col-4, 37.5rem);
       }
 
       &.p-content-card--4-cols:not(.has-image),
       &.p-content-card--6-cols:not(.has-image) {
-        height: 12rem; /* 192px - Fixed height */
+        height: 12rem;
       }
 
       &.p-content-card--4-cols:not(.has-image) .p-rule--muted,
       &.p-content-card--6-cols:not(.has-image) .p-rule--muted {
         margin-left: -$sp-medium;
         margin-right: -$sp-medium;
-        width: calc(100% + $sp-large); /* 32px */
-      }
-    }
-
-    @media screen and ($breakpoint-small <= width < $breakpoint-large) {
-      &.p-content-card--2-cols {
-        align-items: flex-start;
-        align-self: stretch;
-        flex-direction: row;
-        gap: $sp-medium; /* 16px */
-        height: 11.703125rem; /* 187.25px */
-        padding: $sp-medium $sp-medium 0;
-        width: var(--size-width-grid-col-4, 37.5rem); /* 600px */
-      }
-
-      &.p-content-card--2-cols:not(.has-image) {
-        height: 10rem; /* 160px - Fixed height */
-      }
-
-      &.p-content-card--2-cols:not(.has-image) .p-rule--muted {
-        margin-left: -$sp-medium;
-        margin-right: -$sp-medium;
-        width: calc(100% + $sp-large); /* 32px */
+        width: calc(100% + $sp-large);
       }
     }
 
     @media screen and (width >= $breakpoint-large) {
       &.p-content-card--6-cols {
-        height: 11.984375rem; /* 191.75px */
+        height: 11.984375rem;
+        max-width: 100%;
         width: var(--size-width-grid-col-6, 57.25rem); /* 916px */
       }
     }
@@ -206,11 +188,6 @@
           padding: 0;
         }
       }
-      @media screen and ($breakpoint-small <= width < $breakpoint-large) {
-        .p-content-card--2-cols & {
-          padding: 0;
-        }
-      }
     }
 
     &__primary-content,
@@ -252,7 +229,7 @@
       align-items: center;
       align-self: stretch;
       display: flex;
-      height: 2.25rem; /* Fixed height: 36px */
+      height: 2.25rem;
       overflow: hidden;
       padding: 0 $sp-medium var(--spacing-vertical-small, $sp-small) $sp-medium;
       position: relative;
@@ -260,11 +237,6 @@
       @media screen and (width >= $breakpoint-small) {
         .p-content-card--4-cols &,
         .p-content-card--6-cols & {
-          padding: 0 0 var(--spacing-vertical-small, $sp-small) 0;
-        }
-      }
-      @media screen and ($breakpoint-small <= width < $breakpoint-large) {
-        .p-content-card--2-cols & {
           padding: 0 0 var(--spacing-vertical-small, $sp-small) 0;
         }
       }
@@ -320,15 +292,11 @@
       flex-shrink: 0;
       height: 9.984375rem; /* 159.75px */
       object-fit: cover;
+      width: 100%;
 
       @media screen and (width >= $breakpoint-small) {
         .p-content-card--4-cols &,
         .p-content-card--6-cols & {
-          height: 9.703125rem; /* 155.25px */
-        }
-      }
-      @media screen and ($breakpoint-small <= width < $breakpoint-large) {
-        .p-content-card--2-cols & {
           height: 9.703125rem; /* 155.25px */
         }
       }
@@ -345,18 +313,13 @@
       display: flex;
       flex-direction: column;
       gap: var(--spacing-vertical-image-container, 0.625rem); /* 10px -> 0.625rem */
+      max-width: 100%; /* Prevents image wrapper from breaking out of collapsing card */
       padding-bottom: var(--spacing-vertical-large, $sp-medium);
       width: 17.75rem; /* 284px */
 
       @media screen and (width >= $breakpoint-small) {
         .p-content-card--4-cols &,
         .p-content-card--6-cols & {
-          align-self: stretch;
-          flex: 0 0 auto;
-        }
-      }
-      @media screen and ($breakpoint-small <= width < $breakpoint-large) {
-        .p-content-card--2-cols & {
           align-self: stretch;
           flex: 0 0 auto;
         }
@@ -373,7 +336,6 @@
       }
 
       @media screen and ($breakpoint-small <= width < $breakpoint-large) {
-        .p-content-card--2-cols &,
         .p-content-card--6-cols & {
           display: none;
         }
@@ -388,7 +350,7 @@
     }
 
     &:not(.has-image) {
-      height: 12.25rem;
+      height: 12rem;
     }
 
     &.has-image {
